--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>前端安全与实用工具</title>
+    <title>实用工具</title>
     <link href="dist/output.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
     <div class="bg-white rounded-lg shadow-lg p-6 max-w-4xl w-full">
-        <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">前端安全与实用工具</h1>
+        <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">实用工具</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div class="border p-4 rounded-md">
                 <h2 class="text-lg font-semibold mb-4">加密/安全相关小工具</h2>
@@ -47,7 +47,6 @@
                 <ul class="space-y-2">
                     <li><a href="baseconvert.html" class="text-blue-500 hover:underline">进制转换</a></li>
                     <li><a href="textencoding.html" class="text-blue-500 hover:underline">文本编码转换</a></li>
-                    <li><a href="shortlink.html" class="text-blue-500 hover:underline">短链生成</a></li>
                     <li><a href="random.html" class="text-blue-500 hover:underline">随机密码/UUID 生成器</a></li>
                 </ul>
             </div>
