--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>前端安全与实用工具</title>
+    <title>德莉傻的实用工具</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -16,7 +16,7 @@
 </head>
 <body class="bg-transparent min-h-screen flex items-center justify-center p-4">
     <div class="bg-white bg-opacity-60 rounded-lg shadow-lg p-6 max-w-4xl w-full backdrop-blur-sm">
-        <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">前端安全与实用工具</h1>
+        <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">德莉傻的实用工具</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
             <div class="border p-4 rounded-md hover:shadow-md transition">
                 <h2 class="text-lg font-semibold mb-4">加密/安全相关小工具</h2>
@@ -44,3 +44,4 @@
     </div>
 </body>
 </html>
+
