--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                     <li><a href="baseconvert.html" target="_blank" class="text-blue-600 hover:text-blue-800 hover:underline">进制转换</a></li>
                 </ul>
             </div>
+            <div class="border p-4 rounded-md hover:shadow-md transition">
+                <h2 class="text-lg font-semibold mb-4">开发工具</h2>
+                <ul class="space-y-2">
+                    <li><a href="color.html" target="_blank" class="text-blue-600 hover:text-blue-800 hover:underline">颜色选择器与转换器</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
