--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <h2 class="text-lg font-semibold mb-4">Geek 实用小工具</h2>
                 <ul class="space-y-2">
                     <li><a href="baseconvert.html" target="_blank" class="text-blue-600 hover:text-blue-800 hover:underline">进制转换</a></li>
+                    <li><a href="click-speed-tester.html" target="_blank" class="text-blue-600 hover:text-blue-800 hover:underline">点击速度测试器</a></li>
                 </ul>
             </div>
             <div class="border p-4 rounded-md hover:shadow-md transition">
@@ -50,4 +51,3 @@
     </div>
 </body>
 </html>
-
