--- a/aes.html
+++ b/aes.html
@@ -53,7 +53,7 @@
             <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600"></div>
         </div>
        
-        <h1 class="text-2xl font-bold text-center text-gray-800 mb-2">AES-256 + 日文Base 加解密工具（增强版）</h1>
+        <h1 class="text-2xl font-bold text-center text-gray-800 mb-2">AES-256 + 日文Base 加解密工具</h1>
         <p class="text-center text-gray-600 text-sm mb-6"></p>
        
         <!-- 模式指示器 -->
@@ -729,3 +729,4 @@
     </script>
 </body>
 </html>
+
